--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "## why microservice?",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "books:dev": "pnpm run --filter books-service start:dev -- --preserveWatchOutput",
+    "dev": "concurrently 'npm:books:dev'"
   },
   "repository": {
     "type": "git",
@@ -15,5 +17,9 @@
   "bugs": {
     "url": "https://github.com/lovepocky-home/solution-microservice-starter/issues"
   },
-  "homepage": "https://github.com/lovepocky-home/solution-microservice-starter#readme"
+  "homepage": "https://github.com/lovepocky-home/solution-microservice-starter#readme",
+  "dependencies": {
+    "@nestjs/cli": "^8.2.8",
+    "concurrently": "^7.2.2"
+  }
 }
