--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "books:dev": "pnpm run --filter books-service start:dev -- --preserveWatchOutput",
-    "dev": "concurrently 'npm:books:dev'"
+    "books:ui:dev": "pnpm run --filter books-ui start -- --host 0.0.0.0 --port 14200",
+    "gateway:dev": "pnpm run --filter gateway dev -- --port 14000",
+    "dev": "concurrently --restart-after 5000 --restart-tries 3 'npm:books:dev' 'npm:gateway:dev' "
   },
   "repository": {
     "type": "git",
