--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -5,3 +5,6 @@ packages:
   - "components/**"
   # exclude packages that are inside test directories
   - "!**/test/**"
+
+  # thirdparts
+  - "./thirdparts/casdoor-python-vue-sdk-example/web"
