--- a/packages/books-service/package.json
+++ b/packages/books-service/package.json
@@ -28,6 +28,7 @@
     "@nestjs/platform-express": "^8.0.0",
     "apollo-server-express": "^3.9.0",
     "graphql": "^16.5.0",
+    "jose": "^4.10.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
