--- a/packages/books-ui/Dockerfile
+++ b/packages/books-ui/Dockerfile
@@ -5,3 +5,5 @@ WORKDIR /app
 COPY deploy/nginx.conf /etc/nginx/nginx.conf
 
 COPY dist/books-ui /app
+
+# mount config.js to /app/assets/config/config.js
