--- a/dev/apisix.yml
+++ b/dev/apisix.yml
@@ -1,13 +1,25 @@
 routes:
-  - uri: /*
+  - uri: /api/graphql
     upstream:
       nodes:
-        "127.0.0.1:13000": 1
+        "127.0.0.1:14202": 1
       type: roundrobin
     plugins:
-      authz-casdoor:
-        endpoint_addr: "http://100.64.0.4:18000"
-        callback_url: "http://100.64.0.4:9080/callback"
-        client_id: "4258350afda9488c02be"
-        client_secret: "07e82ed1b085dfdd2cf8105ceef536d3be5a614e"
+      cors: {}
+      openid-connect:
+        # https://github.com/apache/apisix/issues/5425
+        client_id: AIONBgkMNra8acZnzpDEp
+        client_secret: ng3niteUBC1LXVaPgHkQt
+        discovery: https://logto.pocki.cc/oidc/.well-known/openid-configuration
+        use_jwks: true
+        bearer_only: true
+        access_token_in_authorization_header: true
+        set_userinfo_header: true
+  - uri: /api
+    upstream:
+      nodes:
+        "127.0.0.1:14202": 1
+      type: roundrobin
+    plugins:
+      cors: {}
 #END
