feat: add database to backend

--- a/packages/books-service/.env
+++ b/packages/books-service/.env
@@ -3,3 +3,5 @@ authn.debug=true
 
 logto.host=logto.pocki.cc
 logto.audience_host=http://localhost:14201
+
+database.postgresql.url=postgres://username:password@postgresql:5432
