--- a/packages/books-service/package.json
+++ b/packages/books-service/package.json
@@ -27,12 +27,15 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/graphql": "^10.0.16",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/typeorm": "^9.0.1",
     "apollo-server-express": "^3.9.0",
     "graphql": "^16.5.0",
     "jose": "^4.10.0",
+    "pg": "^8.8.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "typeorm": "^0.3.10"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
