chore: update database

--- a/packages/books-service/.env
+++ b/packages/books-service/.env
@@ -4,4 +4,4 @@ authn.debug=true
 logto.host=logto.pocki.cc
 logto.audience_host=http://localhost:14201
 
-database.postgresql.url=postgres://username:password@postgresql:5432
+database.postgresql.url=postgres://username:password@postgresql:5432/books
