--- a/packages/books-service/package.json
+++ b/packages/books-service/package.json
@@ -27,6 +27,7 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/graphql": "^10.0.16",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/swagger": "^6.1.2",
     "@nestjs/typeorm": "^9.0.1",
     "apollo-server-express": "^3.9.0",
     "graphql": "^16.5.0",
