--- a/packages/books-ui/package.json
+++ b/packages/books-ui/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
     "@logto/browser": "^1.0.0-beta.8",
+    "keycloak-js": "^19.0.3",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
