cicd: update service dockerfile

--- a/packages/books-service/Dockerfile
+++ b/packages/books-service/Dockerfile
@@ -7,16 +7,34 @@ RUN npm i -g pnpm
 
 WORKDIR /app
 
-COPY pnpm-lock.yaml ./
+RUN pnpm config set store-dir /app/build/.pnpm-store
 
-RUN --mount=type=cache,id=pnpm,target=/root/.local/share/pnpm \
-  --mount=type=cache,id=pnpm2,target=/.pnpm-store \
+COPY pnpm-lock.yaml ./
+# COPY pnpm-workspace.yaml ./
+
+# WORKDIR /app/build
+# RUN --mount=type=cache,id=pnpmstore,target=/app/build \
+#   rm -rfv /app/build/packages/ && \
+#   mv -v /app/pnpm-*.yaml /app/build && pnpm fetch --prod && ls -lah
+RUN --mount=type=cache,id=pnpmstore,target=/app/build \
+  pnpm config set store-dir /app/build/.pnpm-store && \
   pnpm fetch --prod
 
+WORKDIR /app
 COPY .npmrc .
+COPY package.json .
 COPY packages/books-service/package.json packages/books-service/package.json
 
-RUN pnpm --filter books-service --prod deploy pruned
+# WORKDIR /app/build
+# RUN --mount=type=cache,id=pnpmstore,target=/app/build \
+#   cp -rfv /app/.npmrc /app/packages /app/build && \
+#   rm -rfv /app/.npmrc /app/packages && \
+#   rm -rf pruned && \
+#   pnpm --filter books-service --prod deploy pruned && \
+#   cp -r /app/build/pruned /app/pruned
+RUN --mount=type=cache,id=pnpmstore,target=/app/build \
+  pnpm config set store-dir /app/build/.pnpm-store && \
+  pnpm --filter books-service --prod deploy pruned
 
 # --------------------------------------------------------------------------------
 
@@ -26,8 +44,11 @@ ENV NODE_ENV=production
 
 WORKDIR /app
 
+# COPY build/pruned/books-service/node_modules node_modules
 COPY --from=pruned /app/pruned .
 COPY packages/books-service/dist dist
 COPY packages/books-service/.env .
+# COPY packages/books-service/package.json .
 
+# CMD ["node", "dist/main"]
 CMD ["npm", "run", "start:prod"]
