--- a/packages/books-service/package.json
+++ b/packages/books-service/package.json
@@ -30,6 +30,8 @@
     "@nestjs/swagger": "^6.1.2",
     "@nestjs/typeorm": "^9.0.1",
     "apollo-server-express": "^3.9.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "graphql": "^16.5.0",
     "jose": "^4.10.0",
     "pg": "^8.8.0",
