--- a/packages/books-service/package.json
+++ b/packages/books-service/package.json
@@ -18,7 +18,8 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "export NODE_ENV=e2e && jest --config ./test/jest-e2e.ts --detectOpenHandles"
+    "test:e2e": "export NODE_ENV=e2e && jest --config ./test/jest-e2e.ts",
+    "test:e2e:cov": "export NODE_ENV=e2e && jest --coverage --config ./test/jest-e2e.ts"
   },
   "dependencies": {
     "@nestjs/apollo": "^10.0.16",
